<resources>
    <string name="app_name">LanguageExample</string>
    <string name="hindi" translatable="false">हिन्दी</string>
    <string name="english" translatable="false">English</string>
    <string name="bengali" translatable="false">বাংলা</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login_page">Login Page</string>
    <string name="forgot_password" >Forgot Password?</string>
</resources>